text overflow issue fixed

--- a/src/components/Feed/Education.sass
+++ b/src/components/Feed/Education.sass
@@ -9,6 +9,7 @@
     border-bottom: 0.1px solid lightgrey
     float: left
     position: relative
+    overflow-wrap: anywhere
     max-width: 92%
 
 .ubc_logo
