--- a/src/components/Feed/Experience.sass
+++ b/src/components/Feed/Experience.sass
@@ -7,6 +7,7 @@
 
 .ind_exp
     max-width: 92%
+    overflow-wrap: anywhere
 
 .logo
     max-width: 50px
